# Automata

./: .dockerignore  .drone.yml  .env.dist  .gitignore  Bot.py  DB.py  Dockerfile  Globals.py  LICENSE  Plugin.py  README.md  Utils.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: codeql-analysis.yml  deploy.yml
automata/: __main__.py  bot.py  config.py  mongo.py  utils.py
automata/plugins/: __init__.py  agenda.py  binary.py  brainf.py  executive_docs.py  faq.py  fortune_cookie.py  instant_answer.py  lmgtfy.py  man.py  mun_identity.py  number_facts.py  starboard.py  test.py
config/prometheus/: prometheus.yml
mounted_plugins/DisDay/: __init__.py  plugin.json
mounted_plugins/Man/: plugin.json
mounted_plugins/Starboard/: __init__.py  plugin.json
plugins/: Deadly
plugins/3x3 Meme Generator/: __init__.py  plugin.json
plugins/AOC2021/: __init__.py  plugin.json
plugins/Agenda/: __init__.py  plugin.json
plugins/Analytics/: __init__.py  plugin.json
plugins/Announce/: __init__.py  plugin.json
plugins/BadFox/: __init__.py  plugin.json
plugins/Binary/: __init__.py  plugin.json
plugins/BlacklistMode/: __init__.py  plugin.json
plugins/Brainf/: __init__.py  plugin.json
plugins/CTSNL/: __init__.py  plugin.json
plugins/Cards/: __init__.py  deck.py  deck_of_cards_api.py  plugin.json
plugins/Chart/: __init__.py  plugin.json
plugins/Coinflip/: __init__.py  plugin.json
plugins/Continue/: __init__.py  gptj.py  plugin.json
plugins/Course/: __init__.py  bannerScraper.py  calendarScraper.py  peopleScraper.py  plugin.json  (+1 more)
(+101 files in other folders)
